# Text-Adventure-DS-Version

./: .replit  Dialogue.py  Dialogue.txt  README.md  Text to Py.py  accounts.py  frontTest.py  main.py  package.json  pyproject.toml  test.py  user.test.py
adventures/: item.py  quest.py  shop.py  trade.py
combat/: battle.py  move.py  moveList.py  timer.py
commerce/: item.py  shop.py  trade.py
decision/: question.py
entities/: character.py  enemies.py  trauma.py
fighting/: battle.py  effects.py  moveList.py  timer.py
files/writing/: credits.txt
money/: item.py  shop.py  trade.py
narrative/: beginning.py  village_1.py  village_1.txt
narrative/ai'ko_le'po/: main_quest.txt  post_main_quest.txt
narrative/misc/: credits.txt
narrative/nodes/: hub.py  node.py  read_file.py  sections.py
narrative/nodes/NodeInstruction/: UsingNode.txt  example.txt  tutorial.txt
story/: beginning.py
text/: goals.txt  tutorial.txt
translation/: OinanTranslate.py  dictionary.py  translator.py
user/: hashpassword.py  user.py  userFrontend.py
user/config/: Users.store.txt  connectdb.py  floo.py
user/entity/: user.class.temp.py
util/: colors.py  functions.py  instances.py  share_functions.py  variables.py
util/console/: input.py  output.py
util/variable/: instances.py  inventory.py  variables.py
writing/: credits.txt  punctuation.txt
