[tool.poetry]
name = "text-adventure-ds-version"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
replit = "^2.0.0"
PyJWT = "^2.0.1"
argon2 = "^0.1.10"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"